--- a/app/views/partials/share.html
+++ b/app/views/partials/share.html
@@ -2,11 +2,11 @@
 <meta name="twitter:site" content="@openspending">
 <meta name="twitter:title" content="{{ shareMetadata.title | escape }}">
 <meta name="twitter:description" content="{{ shareMetadata.description | truncate(197, true) | escape }}">
-<meta name="twitter:image" content="http://staging.openspending.org/sealer/store?width=500&height=400&url={{ shareMetadata.url | urlencode | escape }}">
+<meta name="twitter:image" content="//staging.openspending.org/sealer/store?width=500&height=400&url={{ shareMetadata.url | urlencode | escape }}">
 
 <meta property="fb:app_id" content="966242223397117">
 <meta property="og:type" content="article">
 <meta property="og:url" content="{{ shareMetadata.url | escape }}">
 <meta property="og:title" content="{{ shareMetadata.title | escape }}">
 <meta property="og:description" content="{{ shareMetadata.description | escape }}">
-<meta property="og:image" content="http://staging.openspending.org/sealer/store?width=600&height=315&url={{ shareMetadata.url | urlencode | escape }}">
+<meta property="og:image" content="//staging.openspending.org/sealer/store?width=600&height=315&url={{ shareMetadata.url | urlencode | escape }}">
