[#1294] Refactor theming to use "os-styles"
This refactoring simplifies quite a bit the theming infrastructure, and reduces
repetition by aggregating the base themes in "os-styles".

Fixes openspending/openspending#1294

--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -34,7 +34,7 @@
   </div>
 
   <div ng-if="!isLoading.application" ng-cloak>
-    <package-info ng-if="state.package.meta" datapackage="state.package.meta"></package-info>
+    <package-info ng-if="state.package.meta" datapackage="state.package.meta" datamine="theme.dataMine"></package-info>
   </div>
 </div>
 {% endraw %}
