--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -12,7 +12,7 @@
     </a>
 
     <ul class="nav navbar-nav pull-right x-footer-icons">
-      <li ng-repeat="link in theme.footer.socialMedia">
+      <li ng-repeat="link in theme.socialMedia">
         <a ng-href="{{ link.href }}">
           <img style="height: 1.5em; vertical-align: middle;"
                ng-src="{{ link.icon }}" alt="{{ link.alt }}">
