Add cookie consent strategy for analytics
Replace GA snippet with new consent strategy as defined in
okfn/devops#142. This commit removes the build of a snippets.js from
webpack as it's no longer necessary.

--- a/app/views/partials/snippets.html
+++ b/app/views/partials/snippets.html
@@ -1,4 +1,9 @@
 <script type="text/javascript">
   globalConfig = {{ globalConfig | stringify }};
+  if (globalConfig.snippets && globalConfig.snippets.ga) {
+    var okiConsent = {
+      analyticsTrackingID: globalConfig.snippets.ga
+    };
+  }
 </script>
-<script src="scripts/snippets.js" type="text/javascript" charset="utf-8"></script>
+<script type='text/javascript' src='https://a.okfn.org/html/oki/consent/assets/js/consent.js?ver=4.9.5'></script>
